# ds_portfolio

./: LICENSE  pyproject.toml
.github/workflows/: deploy.yml
_site/: index.html
_site/notebooks/: practice.html
apps/: heart attack dataset analysis.py  regression_line.py
data/Heart Attack Dataset/: METADATA
data/Music Instruments/: dataset_stats.csv
data/Students' Social Media Addiction/: METADATA
jupyter-notebooks/.ipynb_checkpoints/: Deep Learning Book-checkpoint.ipynb
learn/: deep_learning_book.py
notebooks/: music_instruments.py  practice.py
r_codes/: Exploratory Data Analysis.qmd  Important R Codes.html  Important R Codes.qmd  StatQuest.html  StatQuest.qmd  pca.R  temporary.R  yahoo_finance_data_analysis.R
r_codes/Practice Projects/: Analyzing Billboard Dataset.qmd
r_codes/StatQuest_files/libs/bootstrap/: bootstrap-27b5d3f379174eed94a856c6b848372a.min.css  bootstrap-e873f421ea7bd4f7ecec0f73ad982cec.min.css
scripts/: build.py
