[project]
name = "ds-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "altair-transform",
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "kagglehub>=0.3.12",
    "keras>=3.10.0",
    "marimo[lsp,sql]>=0.13.10",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "vega-datasets>=0.9.0",
]

[tool.uv.sources]
altair-transform = { git = "https://github.com/altair-viz/altair-transform.git" }
