[project]
name = "ds-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "jupyterlab-vim>=4.1.4",
    "kagglehub>=0.3.12",
    "marimo[lsp,sql]>=0.13.10",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torch-molecule>=0.1.2",
]

